# Snakes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  clientInfo.json
.circleci/: config.yml
app/: client.cpp  main.cpp  server.cpp
include/: basic.hpp  bundle.hpp  client.hpp  comperssion.hpp  food.hpp  function_argument_helper.hpp  input.hpp  json_conversion.hpp  map.hpp  server.hpp  snake.hpp  system_helper.hpp  test.h  utils.hpp  zstdcpp.hpp
src/: client.cpp  food.cpp  input.cpp  main.cpp  map.cpp  players.cpp  server.cpp  snake.cpp
test_client2/: config_client.json
